--- a/TextViewer.cls
+++ b/TextViewer.cls
@@ -2032,7 +2032,7 @@ End If
 End If
 ' LOOK THIS SECOND TIME
 If k >= 1 Then
-If col(k - 1) = thiscolor Then Exit Sub
+If k > 1 Then If col(k - 1) = thiscolor Then Exit Sub
 If col(k) = thispos Then
 col(k - 1) = thiscolor: Exit Sub
 End If
